--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   profiles:
     active: dev
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/bid_doc?useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
